--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>io.github.easyretrofit</groupId>
             <artifactId>easy-retrofit-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 
     </dependencies>
