--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -18,8 +18,8 @@
 
         <dependency>
             <groupId>io.github.easyretrofit</groupId>
-            <artifactId>easy-retrofit-core</artifactId>
-            <version>1.0.0</version>
+            <artifactId>core</artifactId>
+            <version>1.1.3-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
